<?xml version="1.0"?>
<package format="3">
    <name>master_board_sdk</name>
    <version>1.0.0</version>
    <description>
        This project contains the SDK for the communication between a computer
        and the master-board
    </description>
    <maintainer email="mnaveau@tue.mpg.de">Maximilien Naveau</maintainer>
    <license>BSD 3-Clause</license>
  
    <buildtool_depend>cmake</buildtool_depend>

    <depend>boost</depend>

    <export>
        <build_type>cmake</build_type>
    </export>
</package>
